# laptop-smart-power-manager

./: LICENSE  README.md  setup.cfg
lspm/: __init__.py  cli.py  exceptions.py  interrupt_event_handler.py  laptop_smart_power_manager.py  logger.py  parameters.py
lspm/smartplug/: __init__.py  base.py  credentials.py  interface.py  tapo_p100.py  tapo_plug.py
scripts/: launch_laptop_smart_power_manager.py  set_smart_plug_credentials.py
