[metadata]
name = lspm
version = attr: lspm.__version__
author = Imanol Setoain
description = Laptop Smart Power Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ImaSet/laptop-smart-power-manager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
install_requires =
    keyring==23.13.1
    psutil==5.9.4
    PyP100==0.0.25
    pywin32==304

[options.entry_points]
console_scripts =
    lspm = lspm.cli:lspm_command