[metadata]
name = lspm
version = attr: lspm.__version__
author = Imanol Setoain
description = LSPM - Laptop Smart Power Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ImaSet/laptop-smart-power-manager
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.7
install_requires =
    keyring==23.13.1
    psutil==5.9.4
    PyP100==0.0.25
    pywin32==304

[options.entry_points]
console_scripts =
    lspm = lspm.cli:lspm_command